@@ -1,5 +1,11 @@
 2010-07-20  Colin Watson  <cjwatson@ubuntu.com>
 
+	* bus/usb/emu/usb.c (grub_usb_poll_devices): Add a dummy
+	implementation of this so that grub-emu links again, with a note
+	that this should support hotplugging in the future.
+
+2010-07-20  Colin Watson  <cjwatson@ubuntu.com>
+
 	* kern/emu/getroot.c (grub_util_get_grub_dev): Use xasprintf.
 
 2010-07-20  Colin Watson  <cjwatson@ubuntu.com>
